[package]
name = "cdf-format-json"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Streaming JSON format drivers for cdf."

[dependencies]
arrow-json = "59.1.0"
bytes = "1.11.0"
cdf-contract = { path = "../cdf-contract" }
cdf-kernel = { path = "../cdf-kernel" }
cdf-memory = { path = "../cdf-memory" }
cdf-runtime = { path = "../cdf-runtime" }
futures-util = "0.3.32"
serde_json = "1.0.150"

[dev-dependencies]
arrow-array = "59.1.0"
arrow-schema = "59.1.0"
bytes = "1.11.0"
futures-executor = "0.3.32"
