[package]
name = "cdf-format-parquet"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Native Parquet format driver for cdf."

[dependencies]
arrow-array = "59.1.0"
arrow-schema = "59.1.0"
bytes = "1.11.0"
cdf-kernel = { path = "../cdf-kernel" }
cdf-expression = { path = "../cdf-expression" }
cdf-memory = { path = "../cdf-memory" }
cdf-runtime = { path = "../cdf-runtime" }
futures-util = "0.3.32"
parquet = { version = "59.1.0", default-features = false, features = ["arrow", "async", "brotli", "flate2-zlib-rs", "lz4", "snap", "zstd"] }
serde_json = "1.0.150"
sha2 = "0.10.9"

[dev-dependencies]
arrow-array = "59.1.0"
cdf-memory = { path = "../cdf-memory" }
futures-executor = "0.3.32"
tempfile = "3.27.0"
