[package]
name = "cdf-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "External data format boundary for cdf."

[dependencies]
duckdb-arrow = { package = "arrow", version = "58.3.0", default-features = false, features = ["ipc"] }
arrow-array = "59.0.0"
arrow-csv = "59.0.0"
arrow-ipc = { version = "59.0.0", features = ["lz4"] }
arrow-json = "59.0.0"
arrow-schema = "59.0.0"
duckdb = { version = "1.10504.0", features = ["bundled", "parquet"] }
cdf-contract = { path = "../cdf-contract" }
cdf-kernel = { path = "../cdf-kernel" }
futures-util = "0.3.32"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"

[dev-dependencies]
cdf-conformance = { path = "../cdf-conformance" }
cdf-package = { path = "../cdf-package" }
futures-executor = "0.3.32"
tempfile = "3.27.0"
