[package]
name = "cdf-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "External data format boundary for cdf."

[dependencies]
arrow-array = "59.0.0"
arrow-csv = "59.0.0"
arrow-ipc = { version = "59.0.0", features = ["lz4"] }
arrow-json = "59.0.0"
arrow-schema = "59.0.0"
cdf-contract = { path = "../cdf-contract" }
cdf-kernel = { path = "../cdf-kernel" }
futures-util = "0.3.32"
hex = "0.4.3"
parquet = { version = "59.0.0", default-features = false, features = ["arrow", "brotli", "flate2-zlib-rs", "lz4", "snap", "zstd"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"

[dev-dependencies]
cdf-conformance = { path = "../cdf-conformance" }
cdf-package = { path = "../cdf-package" }
futures-executor = "0.3.32"
tempfile = "3.27.0"
