[package]
name = "cdf-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Core types, traits, and artifact contracts for cdf."

[dependencies]
arrow-array = "59.1.0"
arrow-schema = "59.1.0"
futures-core = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
