[package]
name = "cdf-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Core types, traits, and artifact contracts for cdf."

[dependencies]
arrow-array = "58.3.0"
arrow-arith = "58.3.0"
arrow-schema = { version = "58.3.0", features = ["serde"] }
futures-core = "0.3.32"
futures-util = "0.3.32"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"

[dev-dependencies]
