[package]
name = "cdf-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Runtime-neutral memory accounting and admission contracts for cdf."

[dependencies]
arrow-array = "59.1.0"
arrow-buffer = "59.1.0"
arrow-data = "59.1.0"
cdf-kernel = { path = "../cdf-kernel" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
futures-executor = "0.3.32"
serde_json = "1.0.150"
