[package]
name = "cdf-package-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Canonical package artifacts and verified-access contracts for cdf."

[dependencies]
arrow-array = "58.3.0"
arrow-schema = { version = "58.3.0", features = ["serde"] }
cdf-kernel = { path = "../cdf-kernel" }
serde = { version = "1.0.228", features = ["derive"] }
