[package]
name = "cdf-package"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Package builder and reader boundary for cdf."

[dependencies]
arrow-array = "59.1.0"
arrow-ipc = { version = "59.1.0", features = ["lz4"] }
arrow-schema = "59.1.0"
cdf-kernel = { path = "../cdf-kernel" }
hex = "0.4.3"
parquet = { version = "59.1.0", default-features = false, features = ["arrow"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tempfile = "3.27.0"
