[package]
name = "cdf-package"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Package builder and reader boundary for cdf."

[dependencies]
arrow-array = "59.1.0"
arrow-ipc = { version = "59.1.0", features = ["lz4"] }
arrow-schema = "59.1.0"
bytes = "1.11.0"
cap-fs-ext = "=4.0.2"
cap-std = "=4.0.2"
cdf-kernel = { path = "../cdf-kernel" }
cdf-memory = { path = "../cdf-memory" }
cdf-package-contract = { path = "../cdf-package-contract" }
hex = "0.4.3"
parquet = { version = "59.1.0", default-features = false, features = ["arrow"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = { version = "0.10.9", features = ["asm"] }
tempfile = "3.27.0"
